--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,15 +1,21 @@
 spring:
 
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/vm_alert_service
+#    username: root
+#    password: madushan
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
   datasource:
-    url: jdbc:mysql://localhost:3306/vm_alert_service
-    username: root
-    password: madushan
+    url: jdbc:mysql://138.201.99.178:3306/vendingdb_general
+    username: remote
+    password: Layantha@193#
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
