--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: VendingMachineAlertService
   profiles:
-    active: prod
+    active: dev
 
 server:
   port: 6060
