--- a/docker-compose-uat.yml
+++ b/docker-compose-uat.yml
@@ -1,4 +1,3 @@
-
 services:
   app:
     image: cbaitd/dev:VENMA_ES_UAT_V1.0.0
@@ -56,28 +55,8 @@ services:
     container_name: "vm-frontend-gen"
     restart: always
 
-  file-export:
-    image: cbaitd/vending-export-service:v1.0.0-cba
-    container_name: vending-export-service
-    ports:
-      - "6797:9797"
-    volumes:
-      - /home/vending-general/logs:/home/logs/FileExportService
-      - /home/vending-general/reports:/home/reports
-    environment:
-      - DB_HOST=138.201.99.178
-      - DB_PORT=3306
-      - DB_NAME=vending_general
-      - DB_USER=remote
-      - DB_PASSWORD=Layantha@193#
-      - FILE_EXPORT_CRON=0 * * * * ?
-      - CLEANUP_DIRECTORY=/home/reports
-      - CLEANUP_PERIOD=1
-      - CLEANUP_CRON=0 04 17 * * ?
-    restart: unless-stopped
-
   alerting-service:
-    image: cbaitgrabit/docker:grabit_alerting_service_V1.0.0
+    image: cbaitgrabit/docker:grabit_alerting_service_V1.0.0_20260112
     container_name: alerting-service
     volumes:
       - /home/vending-general/alert-service/logs:/logs
@@ -89,7 +68,7 @@ services:
       - DATABASE_PORT=3306
       - DATABASE_NAME=vendingdb_general
       - DATABASE_USERNAME=remote
-      - DATABASE_PASSWORD="Layantha@193#"
+      - DATABASE_PASSWORD=Layantha@193#
       - DDL_AUTO_METHOD=none
 
       - SMTP_USERNAME=cba.wireme@gmail.com
@@ -110,9 +89,34 @@ services:
       - BASELINE_MONITOR_LOOKBACK_PERIOD_MONTHS=1
 
       - HOURLY_BASELINE_ALERT_ENABLED=true
-      - HOURLY_BASELINE_ALERT_CRON=0 5 * * * *
+      - HOURLY_BASELINE_ALERT_CRON=0 55 * * * *
       - HOURLY_BASELINE_ALERT_DROP_THRESHOLD_PERCENT=0.30
       - HOURLY_BASELINE_CONSECUTIVE_HOURS_REQUIRED=2
+      - HOURLY_BASELINE_ALERT_COOLDOWN_MINUTES=60
+
+      - VOID_FAILED_ENABLED=true
+      - VOID_FAILED_ALERT_COOLDOWN_MINUTES=60
+      - VOID_FAILED_FAILURE_THRESHOLD=5
+      - VOID_FAILED_CRON=0 */5 * * * *
+
+      - HEARTBEAT_MONITOR_ENABLED=true
+      - HEARTBEAT_MONITOR_CRON=0 */10 * * * *
+      - HEARTBEAT_MONITOR_OFFLINE_THRESHOLD_MINUTES=30
+      - HEARTBEAT_MONITOR_ALERT_COOLDOWN_MINUTES=60
+
+      - CONSECUTIVE_VOID_COMPLETE_ENABLED=true
+      - CONSECUTIVE_VOID_COMPLETE_CRON=0 */5 * * * *
+      - CONSECUTIVE_VOID_COMPLETE_WINDOW_SIZE=10
+      - CONSECUTIVE_VOID_COMPLETE_THRESHOLD=3
+      - CONSECUTIVE_VOID_COMPLETE_PERCENTAGE_THRESHOLD=50.0
+      - CONSECUTIVE_VOID_COMPLETE_ALERT_COOLDOWN_MINUTES=60
+
+      - TIMEOUT_MONITOR_ENABLED=true
+      - TIMEOUT_MONITOR_CRON=0 */5 * * * *
+      - TIMEOUT_MONITOR_WINDOW_SIZE=10
+      - TIMEOUT_MONITOR_CONSECUTIVE_THRESHOLD=3
+      - TIMEOUT_MONITOR_PERCENTAGE_THRESHOLD=50.0
+      - TIMEOUT_MONITOR_ALERT_COOLDOWN_MINUTES=60
 
 networks:
   laravel:
